<resources>
    <string name="app_name">Training</string>
    <string name="title_activity_maps">Map</string>
    <string name="send">send</string>
    <string name="forget_password">Forget Password</string>
    <string name="password">Password</string>
    <string name="mobile_no">Mobile No.</string>
    <string name="for_help_contact_us">For help Contact Us</string>
    <string name="error_mobile_number">Mobile Number very short</string>
    <string name="error_password">Password Very Short</string>
    <string name="title_activity_levels">LevelsActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
</resources>
